[metadata]
name = hubs_voila
version = attr: hubs_voila.__version__
summary = hubs voila manager
long_description = file: README.md
author = search platform
author-email = surrynet@gmail.com
home-page =
license = Free

[options]
zip_safe = False
package_dir = 
    = src
    locale = src/manager
packages = find:
include_package_data = True
setup_requires = 
    setuptools
tests_require = 
    pytest
install_requires = 
    requests
scripts = 

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose --pyargs tests

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    hubs_voila = hubs_voila.manager:main
